# ci-demo

./: CMakeLists.txt  README.md
.devcontainer/: bxarm.json  devcontainer.json
.devcontainer/bxrl78fs/: bxrl78fs.json
.github/workflows/: cx.yml  lmsc-356.yml
arm/: CMakeLists.txt  main.c
rl78/: CMakeLists.txt
settings/: ci-demo.dnx
